# attribs

./: .gitignore  CHANGELOG.md  README.md  pyproject.toml
.github/workflows/: release.yml  tests.yml
src/attribs/: __init__.py  attributes.py  base.py  create.py
tests/: conftest.py  test_attribute.py  test_attributes.py  test_matrix_property.py  test_numeric_compound_property.py  test_numeric_property.py
